--- a/hackerton_front/src/index.css
+++ b/hackerton_front/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
+  background-color: #e0e0e0;
 }
 
 * {
@@ -17,31 +17,45 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   min-height: 100vh;
-  text-align: center;
+  padding: 2rem 0;
+}
+
+.title-container {
+  text-align: right;
+  margin-top: 18px;
+  margin-right: 10px;
 }
 
 .title {
-  margin-bottom: 2rem;
-  font-size: 2.5rem;
+  font-size: 3.2rem;
   color: #333;
+  margin: 0;
+  margin-bottom: 0.05rem;
+}
+
+.sub-title {
+  font-size: 3.2rem;
+  color: #333;
+  margin: 0;
 }
 
 .startBtn {
+  width: 100%;
   padding: 1rem 2rem;
-  font-size: 1.2rem;
-  background-color: #007bff;
+  font-size: 1.3rem;
+  background-color: rgb(128, 143, 133);
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-top: auto;
 }
 
 .startBtn:hover {
-  background-color: #0056b3;
+  background-color: rgb(108, 123, 113);
 }
 
 code {
@@ -89,4 +103,24 @@ code {
 .progress-dot.active {
   background-color: #007bff;
   box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.2);
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.description {
+  font-size: 1.5rem;
+  color: #333;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.memo-image {
+  width: 300px;
+  height: auto;
+  margin-bottom: 2rem;
 } 
