--- a/hackerton_front/src/index.css
+++ b/hackerton_front/src/index.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 5px;
+  gap: 0;
 }
 
 .title-wrapper, .subtitle-wrapper {
@@ -39,18 +39,19 @@ body {
 }
 
 .title-image {
-  width: 300px;
+  width: 350px;
   height: auto;
   display: inline;
   object-fit: contain;
-  margin-top: 50px;
+  margin-top: 80px;
+  margin-left: 50px;
 }
 
 .title {
   font-size: 3.2rem;
   color: #333;
-  margin: 0;
-  margin-bottom: 0.05rem;
+  margin-top: -20px;
+  margin-bottom: -20px;
 }
 
 .sub-title {
@@ -166,7 +167,7 @@ code {
   background-color: #ffe600;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   position: relative;
-  transform: translateY(-340px);
+  transform: translateY(-460px) rotate(-5deg);
   padding: 20px;
 }
 
@@ -199,4 +200,50 @@ code {
   text-align: center;
   margin-top: 40px;
   font-weight: 500;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.speech-bubble {
+  position: absolute;
+  top: 5px;
+  right: 400px;
+  background-color: white;
+  padding: 12px 20px;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  color: #333;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.speech-bubble:after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  right: 20px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid white;
+}
+
+.info-box {
+  width: 300px;
+  margin-top: -200px;
+  padding: 20px;
+  border: 2px dashed rgb(128, 143, 133);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.info-box p {
+  margin: 0;
+  color: #333;
+  font-size: 1.1rem;
+  line-height: 1.5;
 } 
